[workspace]
members = ["core", "ruserf", "types"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "A decentralized solution for service discovery and orchestration that is lightweight, highly available, and fault tolerant."
repository = "https://github.com/al8n/ruserf"
homepage = "https://github.com/al8n/ruserf"
license = "MPL-2.0"
keywords = ["swim", "gossip", "service-discovery", "serf", "memberlist"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[workspace.dependencies]
byteorder = "1"
derive_more = "0.99"
futures = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
humantime-serde = "1"
indexmap = "2"
memberlist-types = { git = "https://github.com/chvojkav/memberlist.git", branch = "buildable-ruserf" }
memberlist-core = { git = "https://github.com/chvojkav/memberlist.git", branch = "buildable-ruserf" }
memberlist = { git = "https://github.com/chvojkav/memberlist.git", branch = "buildable-ruserf" }
thiserror = "1"
viewit = "0.1.5"
smol_str = "0.2"
smallvec = "1"
rand = "0.8"

# memberlist-types = { version = "0.2", path = "../memberlist/types" }
# memberlist-core = { version = "0.2", path = "../memberlist/core" }
# memberlist = { version = "0.2", path = "../memberlist/memberlist" }

ruserf-core = { path = "core", version = "0.1.0", default-features = false }
ruserf-types = { path = "types", version = "0.1.0", default-features = false }
